# bubuvergedev

./: .gitignore  Cargo.toml  Changelog.md  package.json  pnpm-lock.yaml
.git_backup/: config  index  packed-refs
.git_backup/info/: refs
.git_backup/logs/: HEAD
.git_backup/objects/info/: packs
.github/workflows/: autobuild.yml  check-commit-needs-build.yml  clean-old-assets.yml  lint-clippy.yml  release.yml  telegram-notify.yml
.well-known/acme-challenge/: aCJ8Kmp2RuB1TboC7VwAMVA4_8T8i6JpHLC3quM4oNk
crates/clash-verge-i18n/locales/: ar.yml  de.yml  en.yml  es.yml  fa.yml  id.yml  jp.yml  ko.yml  ru.yml  tr.yml  tt.yml  zh.yml  zhtw.yml
crates/sysproxy/: Cargo.toml
crates/sysproxy/benches/: macos_behavior.rs
crates/sysproxy/src/: guard.rs  lib.rs  linux.rs  macos.rs  utils.rs  windows.rs
crates/sysproxy/tests/: test.rs
scripts/: portable-fixed-webview2.mjs  portable.mjs  prebuild.mjs  telegram.mjs  updater-fixed-webview2.mjs  updater.mjs
src/: index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  webview2.arm64.json  webview2.x64.json  webview2.x86.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/cmd/: app.rs  network.rs  proxy.rs
src-tauri/src/config/: verge.rs
src-tauri/src/core/: service.rs  sysopt.rs  updater.rs
src-tauri/src/core/tray/: menu_def.rs  mod.rs
src-tauri/src/enhance/: chain.rs  mod.rs
src-tauri/src/feat/: config.rs  window.rs
src-tauri/src/utils/: dirs.rs  init.rs  schtasks.rs  window_manager.rs
src-tauri/src/utils/resolve/: mod.rs  window.rs
src/assets/styles/: index.scss  layout.scss  page.scss
src/components/base/: base-dialog.tsx  base-page.tsx
src/components/bluelayer/: bluelayer-account-card.tsx  bluelayer-gate.tsx
src/components/home/: current-proxy-card.tsx  proxy-tun-card.tsx  system-info-card.tsx
src/components/layout/: layout-item.tsx  layout-traffic.tsx  update-button.tsx
src/components/proxy/: proxy-groups.tsx  proxy-head.tsx  proxy-item-mini.tsx  proxy-item.tsx  proxy-render.tsx  use-head-state.ts  use-render-list.ts
src/components/setting/: setting-clash.tsx  setting-verge-advanced.tsx  setting-verge-basic.tsx
src/components/setting/mods/: clash-port-viewer.tsx  sysproxy-viewer.tsx  update-viewer.tsx
src/components/shared/: proxy-control-switches.tsx
src/hooks/: use-current-proxy.ts  use-home-routes.ts  use-proxy-selection.ts  use-system-proxy-state.ts  use-update.ts
src/locales/en/: settings.json
src/locales/zh/: settings.json
src/locales/zhtw/: settings.json
src/pages/: _layout.tsx  _routers.tsx  _theme.tsx  account.tsx  home.tsx  proxies.tsx  settings.tsx
src/pages/_layout/hooks/: use-custom-theme.ts
src/services/: bluelayer-dns.ts  bluelayer.ts  cmds.ts  preload.ts  update.ts
